--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+:root {
+  --pink: #efc9c4;
+  --green: #678480;
+  --blue: #53869e;
+  --shadow: 16px 16px 48px #2e364330;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  font-family: "Open Sans", sans-serif;
+  font-size: 17px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #d3d9e230;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+/************ For smaller screen sizes ************/
+@media (max-width: 768px) {
+  .App {
+    width: 100vw;
+    font-size: 80%;
+    flex-direction: column;
+    align-items: flex-start;  
+    justify-content: flex-start;
   }
 }
